--- a/src/monad.html
+++ b/src/monad.html
@@ -52,9 +52,10 @@
                     controller support!
                 </p>
                 <p>
-                    Take a look at the project on <a href="">Itch.io</a>! Or alternatively if you want to poke around
+                    Take a look at the project on <a href="https://1steve513.itch.io/monad">Itch.io</a>! Or
+                    alternatively if you want to poke around
                     in-engine,
-                    check it out on my Github!
+                    check it out on my <a href="https://github.com/PolarstarCoffee/p_Monad">Github</a>!
                 </p>
             </div>
             <div class="slideshow">
