--- a/src/monad.html
+++ b/src/monad.html
@@ -52,10 +52,10 @@
                     controller support!
                 </p>
                 <p>
-                    Take a look at the project on <a href="https://1steve513.itch.io/monad">Itch.io</a>! Or
+                    Take a look at the project on <a href="https://1steve513.itch.io/monad" id="projsource">Itch.io</a>! Or
                     alternatively if you want to poke around
                     in-engine,
-                    check it out on my <a href="https://github.com/PolarstarCoffee/p_Monad">Github</a>!
+                    check it out on my <a href="https://github.com/PolarstarCoffee/p_Monad" id="projsource">Github</a>!
                 </p>
             </div>
             <div class="slideshow">
