--- a/src/ibunn.html
+++ b/src/ibunn.html
@@ -32,8 +32,18 @@
         </div>
         <div class="workbody">
             <div class="projectdesc">
-                <p id="projectText">
-                    The start.
+                <p>
+                    My intention for developing this project in particular was to roughly emulate the core gameplay loop
+                    of a 1st person point of view turn-based dungeon crawler. This type of game in particular is pretty retro,
+                    but I believe it's a truly unique style of game that can use some attention in the industry!
+                </p>
+                <p>
+                    The primary growing pains of constructing this project was understanding how to implement the grid-based movement present
+                    in games of this genre. I was able to develop such in Unity (I believe this method is similar in Unreal) by creating a script that moves the player controller forward by a single unit,
+                    but fires a raycast based on the player camera's orientation that would detect if that move was valid or not.
+                </p>
+                <p>
+                     Check out the project on my <a href="https://github.com/PolarstarCoffee/p_Monad" id="projsource">GitHub</a>!
                 </p>
             </div>
             <div class="slideshow">
@@ -57,8 +67,4 @@
         <script src="slideshow.js"></script>
     </div>
 </body>
-
 </html>
-
-<!--TODO: EXPAND ON PROJECT
-THOUGHT PROCESS, WHAT YOU DID, HOW IT WENT AND WHAT YOU LEARNEDs-->
