--- a/src/monad.html
+++ b/src/monad.html
@@ -33,8 +33,8 @@
         <div class="workbody">
             <div class="projectdesc">
                 <p>
-                    The inital brainstorming for this project was quite sporatic from what I remember. The team had many
-                    ideas, but
+                    The inital brainstorming for this project was quite sporadic from what I remember. Though the team had many
+                    ideas,
                     nothing was sticking. To get into a creative headspace I had put together a sample scene with a
                     player controller
                     and had urged the team to play wihin the space and note down anything that would arise from their
@@ -42,20 +42,20 @@
                     engine.
                 </p>
                 <p>
-                    Eventually as development continued we were able to iterate on some core ideas! During such I
+                    Eventually as development continued we were able to iterate on some core ideas and bring some soul to our project! During such I
                     contributed by
                     implementating the core character
                     controller
-                    alongside it's animations. Alongside some supplemental work regarding UI functionality, scene
+                    alongside it's animations. In addition to some supplemental work regarding drafting documentation, UI functionality, scene
                     transitions,
                     and XInput
                     controller support!
                 </p>
                 <p>
-                    Take a look at the project on <a href="https://1steve513.itch.io/monad" id="projsource">Itch.io</a>! Or
+                    Download the project on <a href="https://1steve513.itch.io/monad" id="projsource">Itch.io</a>! Or
                     alternatively if you want to poke around
                     in-engine,
-                    check it out on my <a href="https://github.com/PolarstarCoffee/p_Monad" id="projsource">Github</a>!
+                    check it out on my <a href="https://github.com/PolarstarCoffee/p_Monad" id="projsource">GitHub</a>!
                 </p>
             </div>
             <div class="slideshow">
@@ -94,5 +94,3 @@
 
 </html>
 
-<!--TODO: EXPAND ON PROJECT
-THOUGHT PROCESS, WHAT YOU DID, HOW IT WENT AND WHAT YOU LEARNEDs-->
