--- a/src/p4.html
+++ b/src/p4.html
@@ -34,15 +34,14 @@
             <div class="projectdesc">
                 <p>
                     Puppy Pets Puzzle Program (P4 but not Persona 4) was my first "start to finish" game dev project
-                    during
-                    my studies as an undergrad. We were then instructed to develop a short experience that one may
-                    be able to find at an adoption center.
+                    during my studies. I am very thankful for the team I had worked with at the time, for development
+                    was as smooth as it
+                    could have
+                    been! We had figured our project scope quite early on and truly owned our roles.
 
                 </p>
                 <p>
-                    I am very thankful for the team I had worked with at the time, for development was as smooth as it
-                    could have
-                    been! We had figured our project scope quite early on
+
                 </p>
             </div>
             <div class="slideshow">
