work at work, am i done?

--- a/src/monad.html
+++ b/src/monad.html
@@ -33,7 +33,8 @@
         <div class="workbody">
             <div class="projectdesc">
                 <p>
-                    The inital brainstorming for this project was quite sporadic from what I remember. Though the team had many
+                    The inital brainstorming for this project was quite sporadic from what I remember. Though the team
+                    had many
                     ideas,
                     nothing was sticking. To get into a creative headspace I had put together a sample scene with a
                     player controller
@@ -42,11 +43,13 @@
                     engine.
                 </p>
                 <p>
-                    Eventually as development continued we were able to iterate on some core ideas and bring some soul to our project! During such I
+                    Eventually as development continued we were able to iterate on some core ideas and bring some soul
+                    to our project! During such I
                     contributed by
                     implementating the core character
                     controller
-                    alongside it's animations. In addition to some supplemental work regarding drafting documentation, UI functionality, scene
+                    alongside it's animations. In addition to some supplemental work regarding drafting documentation,
+                    UI functionality, scene
                     transitions,
                     and XInput
                     controller support!
@@ -55,7 +58,8 @@
                     Download the project on <a href="https://1steve513.itch.io/monad" id="projsource">Itch.io</a>! Or
                     alternatively if you want to poke around
                     in-engine,
-                    check it out on my <a href="https://github.com/PolarstarCoffee/p_Monad" id="projsource">GitHub</a>!
+                    check out the source code on my <a href="https://github.com/PolarstarCoffee/p_Monad"
+                        id="projsource">GitHub</a>!
                 </p>
             </div>
             <div class="slideshow">
@@ -93,4 +97,3 @@
 </body>
 
 </html>
-
