--- a/src/p4.html
+++ b/src/p4.html
@@ -33,7 +33,7 @@
         <div class="workbody">
             <div class="projectdesc">
                 <p>
-                    Puppy Pets Puzzle Program (P4 but not Persona 4) was my first "start to finish" game dev project
+                    Puppy Pets Puzzle Program (P4, not Persona 4) was my first "start to finish" game dev project
                     during my studies. I am very thankful for the team I had worked with at the time, for development
                     was as smooth as it
                     could have
@@ -41,8 +41,16 @@
 
                 </p>
                 <p>
+                    This project was an excellent learning experience in regards to understanding core programming
+                    practices and system design methods such as singletons, encapsulation, asynchronous functions and
+                    data manipulation utilizing data
+                    structures.
 
                 </p>
+                <P>
+                    Feel free to check out the source code on my <a
+                        href="https://github.com/PolarstarCoffee/PuppyPetsPuzzleProgram-P4-" id="projsource">GitHub</a>!
+                </P>
             </div>
             <div class="slideshow">
                 <div class="slides">
