--- a/src/works.html
+++ b/src/works.html
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div class="subMenu">
-            <a href="home.html" id="menu-home">HOME</a>
+            <a href="index.html" id="menu-home">HOME</a>
             <a href="works.html" id="menu-works">WORKS</a>
             <a href="resume.html" id="menu-resume">RESUME</a>
             <a href="about.html" id="menu-about">ABOUT</a>
@@ -37,14 +37,17 @@
                     <img src="img/proj_img/monad_cover.png" alt="monadcover" id="monadcover">
                 </a>
                 <p id="projectText">
-                    Monad is a PSX inspired 3D adventure platformer developed in Unity. A fully fledged experience featuring nostalgic gameplay elements from 
+                    Monad is a PSX inspired 3D adventure platformer developed in Unity. A fully fledged experience
+                    featuring nostalgic gameplay elements from
                     titles such as Resident Evil. This project was constructed by
                     weekly sprints over
                     the course of 3 months, within a team of 9.
                 </p>
                 <p id="projectText">
-                    What started off as a slow crawl, quickly developed into a full sprint. As this was the most ambitious project
-                    I've been fortunate enough to be apart of up to this point. This experience solidifed my passion for game programming!
+                    What started off as a slow crawl, quickly developed into a full sprint. As this was the most
+                    ambitious project
+                    I've been fortunate enough to be apart of up to this point. This experience solidifed my passion for
+                    game programming!
 
                 </p>
             </div>
@@ -58,7 +61,8 @@
                     made in Unity. I developed this project on my own in 10 weekly sprints.
                 </p>
                 <p id="projectText">
-                    One of my more experimental projects, based off of gameplay components of some of my favorite games of all time. 
+                    One of my more experimental projects, based off of gameplay components of some of my favorite games
+                    of all time.
                     Specifically <em>Megami Ibunroku: Persona, Etrian Odyssey and Devil Summoner: Soul Hackers</em>
                 </p>
             </div>
@@ -68,12 +72,14 @@
                     <img src="img/proj_img/p4_startscreen.png" alt="p4_startscreen">
                 </a>
                 <p id="projectText">
-                    Puppy Pets Puzzle Program (P4) is a connect-3 matching game made in Unity. Designed around the overarching
+                    Puppy Pets Puzzle Program (P4) is a connect-3 matching game made in Unity. Designed around the
+                    overarching
                     concept of a quick game that can be played at an adoption center. Developed
                     in 10 weekly sprints within a team of 3.
                 </p>
-                <p id="projectText"> 
-                     An earlier project that introduced me to the development cycle of games, and oddly enough the smoothest one at that.
+                <p id="projectText">
+                    An earlier project that introduced me to the development cycle of games, and oddly enough the
+                    smoothest one at that.
                 </p>
             </div>
         </div>
