--- a/src/monad.html
+++ b/src/monad.html
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div class="subMenu">
-            <a href="home.html" id="menu-home">HOME</a>
+            <a href="index.html" id="menu-home">HOME</a>
             <a href="works.html" id="menu-works">WORKS</a>
             <a href="resume.html" id="menu-resume">RESUME</a>
             <a href="about.html" id="menu-about">ABOUT</a>
