update test rollback

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     extremely eager to contribute to innovative projects to further immerse players in digital
                     experiences
                     akin
-                    to my own. In tangent further my technical skillset, committed to a lifetime of learning! TEST
+                    to my own. In tangent further my technical skillset, committed to a lifetime of learning!
                 </p>
                 <p id="bio">
                     To the right are images from my most recently completed project, with more detail alongside a couple
