--- a/resume.html
+++ b/resume.html
@@ -39,10 +39,10 @@
             <iframe class="resume" src="img/resume/octavio_Resume.pdf" width="600" height="500"></iframe>
             <p id="resumetext">
                 To the left is my current resume as of February 2025.
-                I'm currently applying to game programming positions with the hopes of entering the games industry!
-                Though
-                I am employed with Xfinity as an SSA at the moment, I'm working on projects and doing
-                what I can to push myself forward.
+                I'm currently applying to game programming and software developer
+                positions in particular with the hopes of finding an entry-point into the industry and expanding my
+                horizons in Tech!
+
             </p>
         </div>
 </body>
