about page updates

--- a/about.html
+++ b/about.html
@@ -34,16 +34,17 @@
             <img src="img/proj_img/headshot.jpg" alt="headshot" id="headshot">
             <span id="aboutintro">
                 <p id="aboutstart">
-                    During my time at DePaul University, I had studied Game Design for my bachelor’s with my minor in
-                    Computer Science. Amidst my studies I was able to indulge myself in the process of executing an idea
-                    or concept through
-                    constant prototyping, debugging and construction. Sincerely invaluable skills applicable to game
+                    During my time as an undergrad I had been able to indulge myself in the process of executing an idea
+                    through
+                    constant construction, prototyping and debugging. Sincerely invaluable skills applicable to game
                     development
-                    and generalized computer science. I will never forget the late nights of trailing through
+                    and generalized computer science solutions. I will never forget the late nights of trailing through
                     breakpoints
                     and scouring through documentation to lead myself to that eureka moment in which everything falls
                     into its correct
-                    place.
+                    place. Combining that with developing alongside even more passionate teams only solidified my love
+                    for the field,
+                    the people, and their craft.
                 </p>
                 <p id="aboutnext">
                     Now that I’ve graduated, I look forward to the next opportunity in which I can contribute my passion
