--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
         <div class="workbody">
             <div class="worktextbody">
                 <p id="bio">
-                    My name is Zuriel (Octavio is my first name but most people call me by my middle name),
-                    and I'm a graduated student from Depaul University. Self-driven with a
+                    I'm Zuriel, or Octavio, a graduated student from Depaul University. Self-driven with a
                     strong foundation in computer science and a deep passion for game programming, I am
                     extremely eager to contribute to innovative projects to further immerse players in digital
                     experiences
