works page update

--- a/works.html
+++ b/works.html
@@ -47,7 +47,7 @@
                     What started off as a slow crawl, quickly developed into a full sprint. As this was the most
                     ambitious project
                     I've been fortunate enough to be apart of up to this point. This experience solidifed my passion for
-                    game programming!
+                    programming!
 
                 </p>
             </div>
