updated some portions of the site, sound more concise

--- a/about.html
+++ b/about.html
@@ -34,28 +34,24 @@
             <img src="img/proj_img/headshot.jpg" alt="headshot" id="headshot">
             <span id="aboutintro">
                 <p id="aboutstart">
-                    During my time as an undergrad I had been able to indulge myself in the process of executing an idea
-                    through
-                    constant construction, prototyping and debugging. Sincerely invaluable skills applicable to game
-                    development
-                    and generalized computer science solutions. I will never forget the late nights of trailing through
-                    breakpoints
-                    and scouring through documentation to lead myself to that eureka moment in which everything falls
-                    into its correct
-                    place. Combining that with developing alongside even more passionate teams only solidified my love
-                    for the field,
-                    the people, and their craft.
+                    As an undergraduate, I developed a deep appreciation for taking ideas from concept to
+                    completion-through iteration, prototyping, debugging, and problem-solving. Those late nights of
+                    stepping through breakpoints and combing through documentation taught me persitence and sharpened
+                    the skills I now bring to both game development and broader computer science challenges.
+                </p>
+                <p id="aboutnext1">
+                    What I value most, though, are the opprotunities I've had to collaborate with passionate, creative
+                    teams-experiences that strengthened not only my technical ability but also my love for the craft and
+                    the people behind it.
                 </p>
                 <p id="aboutnext">
-                    Now that I’ve graduated, I look forward to the next opportunity in which I can contribute my passion
-                    and
-                    technical
-                    skills to bring to life more wonderful and strange digital experiences. Until then I'll continue to
-                    learn, and develop!
-                    All while remaining frontwards facing.
+                    Now that I’ve graduated, I'm eager to apply my skills across game development, and software
+                    engineering. My goal is to contribute to projects that create engaging, useful and sometimes
+                    wonderfully strange digital experiences-while continuing to explore new technologies and expand my
+                    expertise.
                 </p>
                 <p id="aboutlast">
-                    Check out what I've been reading as of late to keep myself polished and moving forward!
+                    Check out what I've been reading as of late to keep myself polished!
 
                 </p>
             </span>
