--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         <div class="workbody">
             <div class="worktextbody">
                 <p id="bio">
-                    I'm Zuriel, or Octavio, a graduated student from Depaul University. Self-driven with a
-                    strong foundation in computer science and a deep passion for game programming, I am
-                    extremely eager to contribute to innovative projects to further immerse players in digital
-                    experiences
-                    akin
-                    to my own. In tangent further my technical skillset, committed to a lifetime of learning!
+                    I’m Zuriel (Or Octavio), a game design and computer science graduate specializing in game and
+                    application development.
+                    With a strong
+                    foundation in programming and a commitment to continuous learning, I’m eager to contribute my skills
+                    to innovative
+                    projects that create engaging digital experiences.
                 </p>
                 <p id="bio">
                     To the right are images from my most recently completed project, with more detail alongside a couple
