--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
                     the skills I now bring to both game development and broader computer science challenges.
                 </p>
                 <p id="aboutnext1">
-                    What I value most, though, are the opprotunities I've had to collaborate with passionate, creative
+                    What I value most though, are the opprotunities I've had to collaborate with passionate, creative
                     teams-experiences that strengthened not only my technical ability but also my love for the craft and
                     the people behind it.
                 </p>
