--- a/resume.html
+++ b/resume.html
@@ -38,8 +38,8 @@
         <div class="resumeBody">
             <iframe class="resume" src="img/resume/octavioZavala.pdf" width="600" height="500"></iframe>
             <p id="resumetext">
-                To the left is my current resume as of August 2025.
-                I'm currently applying to game programming and software developer
+                To the left is my current resume as of October 2025.
+                I'm currently applying to Game Programming and Software Developer
                 positions in particular with the hopes of finding an entry-point into the industry and expanding my
                 horizons in Tech!
 
