change to homepage

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         <div class="workbody">
             <div class="worktextbody">
                 <p id="bio">
-                    I’m Zuriel (Or Octavio), a game design and computer science graduate specializing in game and
+                    I’m Zuriel, or Octavio, a Game Design and Computer Science graduate specializing in game and
                     application development.
                     With a strong
                     foundation in programming and a commitment to continuous learning, I’m eager to contribute my skills
                     to innovative
-                    projects that create engaging digital experiences.
+                    projects and digital solutions.
                 </p>
                 <p id="bio">
                     To the right are images from my most recently completed project, with more detail alongside a couple
