--- a/resume.html
+++ b/resume.html
@@ -38,11 +38,7 @@
         <div class="resumeBody">
             <iframe class="resume" src="img/resume/octavioZavala.pdf" width="600" height="500"></iframe>
             <p id="resumetext">
-                To the left is my current resume as of October 2025.
-                I'm currently applying to Game Programming and Software Developer
-                positions in particular with the hopes of finding an entry-point into the industry and expanding my
-                horizons in Tech!
-
+                Last update: Feburary 2026.
             </p>
         </div>
 </body>
